trabajando en htmml, vinculando el css y acomodando archivos en carpeta css

--- a/views/home.html
+++ b/views/home.html
@@ -1,105 +1,111 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/06a70b2dd1.js" crossorigin="anonymous"></script>
     <title>Home</title>
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/import.css">
 </head>
+
 <body>
-    <header>
-        <img class="logo "src="/img/logo-mercado-liebre.svg" alt="logo-mercado-liebre" width="150" height="">
-        <nav><input  class="search-header" placeholder="barra de busqueda">
+    <header class="header-general">
+        <img class="logo " src="/img/logo-mercado-liebre.svg" alt="logo-mercado-liebre" width="150" height="">
+        <nav><input class="search-header" placeholder="busqueda"  ><i  class="fa-solid fa-magnifying-glass"></i>
+            
+            
             <p>compra en cuotas y sin tarjeta de credito</p>
             <section>
-            
-            <ul>
-                <li>Ofertas</li>
-                <li>Tiendas Oficiales</li>
-                <li>Vender</li>
-                <li>Ayuda</li>
-             </ul>
-            
-             <ul>
-             <li>Crear tu cuenta</li>
-             <li>Ingresar</li>
-             <li>Mis compras</li>
-            </ul>
+
+                <ul class="ofertas">
+                    <li>Ofertas</li>
+                    <li>Tiendas Oficiales</li>
+                    <li>Vender</li>
+                    <li>Ayuda</li>
+                </ul>
+
+                <ul class="login">
+                    <li>Crear tu cuenta</li>
+                    <li>Ingresar</li>
+                    <li>Mis compras</li>
+                </ul>
         </nav>
     </header>
-    <main>
-        <section>
+    <main class="imagenes">
+        <section class="seccion-art-1">
             <h2>Sección: Basado en tu última visita</h2>
-            <div>
-                <h4>imagen de la cafetera</h4>
+            <div class="articulos">
+                <h4 class="h4-div-seccion-1">imagen de la cafetera</h4>
                 <p>$6.770</p>
                 <p>40% OFF</p>
-                <h4>Cafetera Molinex</h4>
+                <h4 class="h4-div-seccion-1">Cafetera Molinex</h4>
             </div>
             <div>
-                <h4>imagen de Macbook</h4>
+                <h4 class="h4-div-seccion-1">imagen de Macbook</h4>
                 <p>$230.000</p>
                 <p>20% OFF</p>
-                <h4>MacBook Pro 2019</h4>
+                <h4 class="h4-div-seccion-1">MacBook Pro 2019</h4>
             </div>
             <div>
-                <h4>Imagen Samsung Galaxi</h4>
+                <h4 class="h4-div-seccion-1">Imagen Samsung Galaxi</h4>
                 <p>$70.5oo</p>
                 <p>10% off</p>
-                <h4>Samsung Galaxy S10</h4>
+                <h4 class="h4-div-seccion-1">Samsung Galaxy S10</h4>
             </div>
             <div>
-                <h4>imagen del SmartTv</h4>
+                <h4 class="h4-div-seccion-1">imagen del SmartTv</h4>
                 <p>$23.200</p>
                 <p>5%off</p>
-                <h4>SmartTv Samsung 43"</h4>
+                <h4 class="h4-div-seccion-1">SmartTv Samsung 43"</h4>
             </div>
         </section>
-        <section>
+        <section class="seccion-art-2">
             <h2>Sección de Ofertas </h2>
             <div>
-                <h4>imagen de la cafetera</h4>
+                <h4 class="h4-div-seccion-2">imagen de la cafetera</h4>
                 <p>$6.770</p>
                 <p>40% OFF</p>
-                <h4>Cafetera Molinex</h4>
+                <h4 class="h4-div-seccion-2">Cafetera Molinex</h4>
             </div>
             <div>
-                <h4>imagen de Macbook</h4>
+                <h4 class="h4-div-seccion-2">imagen de Macbook</h4>
                 <p>$230.000</p>
                 <p>20% OFF</p>
-                <h4>MacBook Pro 2019</h4>
+                <h4 class="h4-div-seccion-2">MacBook Pro 2019</h4>
             </div>
             <div>
-                <h4>Imagen Samsung Galaxi</h4>
+                <h4 class="h4-div-seccion-2">Imagen Samsung Galaxi</h4>
                 <p>$70.5oo</p>
                 <p>10% off</p>
-                <h4>Samsung Galaxy S10</h4>
+                <h4 class="h4-div-seccion-2">Samsung Galaxy S10</h4>
             </div>
             <div>
-                <h4>imagen del SmartTv</h4>
+                <h4 class="h4-div-seccion-2">imagen del SmartTv</h4>
                 <p>$23.200</p>
                 <p>5%off</p>
-                <h4>SmartTv Samsung 43"</h4>
+                <h4 class="h4-div-seccion-2">SmartTv Samsung 43"</h4>
             </div>
         </section>
     </main>
     <footer>
-        <div>
-            <h4>Pagá con tarjeta o en efectivo </h4>
+        <div class="div-footer">
+            <h4 class="h4-div-footer">Pagá con tarjeta o en efectivo </h4>
             <p>Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en
-            puntos de pago. ¡Y siempre es seguro</p>
+                puntos de pago. ¡Y siempre es seguro</p>
         </div>
-        <div>
-            <h4>Envío gratis desde $ 2.500</h4>
+        <div class="div-footer">
+            <h4 class="h4-div-footer">Envío gratis desde $ 2.500</h4>
             <p>Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de
-            productos. Es un beneficio de Mercado Puntos.</p>
+                productos. Es un beneficio de Mercado Puntos.</p>
         </div>
-        <div>
-            <h4>Seguridad, de principio a fin</h4>
+        <div class="div-footer">
+            <h4 class="h4-div-footer">Seguridad, de principio a fin</h4>
             <p>¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer,
-            porque estás siempre protegid@. </p>
+                porque estás siempre protegid@. </p>
         </div>
-        <p>Copyright © 1999-2020 MercadoLiebre S.R.L</p>
+        <p class="p-copy">Copyright © 1999-2020 MercadoLiebre S.R.L</p>
     </footer>
 </body>
+
 </html>
