--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,24 +1,3 @@
-body{   
-    display: flex;
-    flex-direction: column;
-    align-content: center;
-    align-items: center;
-    width: 45%;
-    margin-left: 26%;
-}
-header{
-    background-color: rgba(250, 250, 107, 0.824);
-    width: 95%;
-    display: flex;
-    flex-wrap: nowrap;
-    flex-direction: row;
-    align-content: stretch;
-    justify-content: space-evenly;
-    align-items: flex-start;
-}
-.logo{
-width:47%
-}
-.search-header{
-    width: 45%;
-}
+@import url(general.css);
+@import url(style.css);
+@import url(home.css)
