trabajando en home.css

--- a/public/css/general.css
+++ b/public/css/general.css
@@ -1,19 +1,17 @@
 :root{
-    --variable-color-Amarillo: #EAC926;
-    --color-Azul: #03264C;
-    --color-Celeste: #1259c3;
-    --color-Grisoscuro: #666;
-    --color-Grisclaro: #ebebeb;
-    --color-Verde: #39b54a;
-
+    --variable-color-Amarillo:hwb(50 15% 9%);
+    --color-Azul:hwb(211 1% 71%);
+    --color-Celeste:hwb(216 7% 24%);
+    --color-Grisoscuro:hwb(0 40% 60%);
+    --color-Grisclaro:hwb(0 92% 8%);
+    --color-Verde:hwb(128 22% 29%);
 }
 
-   *{
-        box-sizing: border-box;
-       font-family: 'Roboto';
-   } 
+*{
+    box-sizing: border-box;
+    font-family: 'Roboto';
+} 
    
-  @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
   
       
