--- a/views/home.html
+++ b/views/home.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/06a70b2dd1.js" crossorigin="anonymous"></script>
     <title>Home</title>
-    <link rel="stylesheet" href="../css/import.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 
 <body>
@@ -14,26 +14,30 @@
         <img class="logo " src="/img/logo-mercado-liebre.svg" alt="logo-mercado-liebre" width="150" height="">
         <nav><input class="search-header" placeholder="busqueda"  ><i  class="fa-solid fa-magnifying-glass"></i>
             
-            
-            <p>compra en cuotas y sin tarjeta de credito</p>
+            <div>
+                <i class="fa-light fa-hand-holding-heart"></i>   
+                <p>compra en cuotas y sin tarjeta de credito</p>
+            </div>
             <section>
-
+                
                 <ul class="ofertas">
                     <li>Ofertas</li>
                     <li>Tiendas Oficiales</li>
                     <li>Vender</li>
                     <li>Ayuda</li>
                 </ul>
-
+                
                 <ul class="login">
                     <li>Crear tu cuenta</li>
                     <li>Ingresar</li>
                     <li>Mis compras</li>
                 </ul>
-        </nav>
-    </header>
+            </nav>
+            <i class="fa-light fa-bars"></i>
+        </header>
     <main class="imagenes">
         <section class="seccion-art-1">
+            <img src="/img/img-cafetera-moulinex.jpg" alt="">
             <h2>Sección: Basado en tu última visita</h2>
             <div class="articulos">
                 <h4 class="h4-div-seccion-1">imagen de la cafetera</h4>
@@ -42,6 +46,7 @@
                 <h4 class="h4-div-seccion-1">Cafetera Molinex</h4>
             </div>
             <div>
+                <img src="/img/img-macbook-pro-2019.jpg" alt="">
                 <h4 class="h4-div-seccion-1">imagen de Macbook</h4>
                 <p>$230.000</p>
                 <p>20% OFF</p>
@@ -96,9 +101,9 @@
         </div>
         <div class="div-footer">
             <h4 class="h4-div-footer">Envío gratis desde $ 2.500</h4>
-            <p>Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de
-                productos. Es un beneficio de Mercado Puntos.</p>
+            productos. Es un beneficio de Mercado Puntos.</p>
         </div>
+        <p>Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de
         <div class="div-footer">
             <h4 class="h4-div-footer">Seguridad, de principio a fin</h4>
             <p>¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer,
