--- a/views/home.html
+++ b/views/home.html
@@ -11,55 +11,62 @@
 
 <body>
     <header class="header-general">
-        <img class="logo " src="/img/logo-mercado-liebre.svg" alt="logo-mercado-liebre" width="150" height="">
-        <nav><input class="search-header" placeholder="busqueda"  ><i  class="fa-solid fa-magnifying-glass"></i>
-            
-            <div>
-                <i class="fa-light fa-hand-holding-heart"></i>   
-                <p>compra en cuotas y sin tarjeta de credito</p>
+        <img class="logo" src="/img/logo-mercado-liebre.svg" alt="logo-mercado-liebre">
+        <input class="search-header" placeholder="busqueda"><i class="fa-solid fa-magnifying-glass"></i>
+
+            <div class="mano-regalo">
+                <i class="fa-solid fa-hand-holding-heart"></i>
+                <p> compra en cuotas y sin tarjeta de credito</p>
             </div>
-            <section>
-                
-                <ul class="ofertas">
-                    <li>Ofertas</li>
-                    <li>Tiendas Oficiales</li>
-                    <li>Vender</li>
-                    <li>Ayuda</li>
-                </ul>
-                
-                <ul class="login">
-                    <li>Crear tu cuenta</li>
-                    <li>Ingresar</li>
-                    <li>Mis compras</li>
-                </ul>
+            
+            <nav class="ofertas">
+             <ul class="botones">
+                  <li><a class="linck"href=""> Ofertas </a></li>
+                  <li><a class="linck"href=""> Tiendas oficiales </a></li>
+                  <li><a class="linck"href=""> Vender </a></li>
+                  <li><a class="linck"href=""> Ayuda </a></li>
+            </ul>
             </nav>
-            <i class="fa-light fa-bars"></i>
-        </header>
+            <nav class="login">
+            <ul>
+                 <li><a class="link"href=""> Crear tu cuenta </a><i class="fa-solid fa-address-card"></i></li>
+                 <li><a class="link"href=""> Ingresar </a><i class="fa-solid fa-right-to-bracket"></i></li>
+                <li><a class="link"href=""> Mis compras </a><i class="fa-solid fa-basket-shopping"></i></li>
+
+            </ul>
+        </nav>
+        <div class="burger-menu">
+            <i class="fas fa-bars"></i>
+        </div>
+    </header>
+    <img class="banner" src="/img/img-home-banner.jpg" alt="">
     <main class="imagenes">
         <section class="seccion-art-1">
-            <img src="/img/img-cafetera-moulinex.jpg" alt="">
             <h2>Sección: Basado en tu última visita</h2>
             <div class="articulos">
-                <h4 class="h4-div-seccion-1">imagen de la cafetera</h4>
+                <img src="/img/img-cafetera-moulinex.jpg" alt="imagen de la cafetera">
                 <p>$6.770</p>
                 <p>40% OFF</p>
                 <h4 class="h4-div-seccion-1">Cafetera Molinex</h4>
             </div>
-            <div>
-                <img src="/img/img-macbook-pro-2019.jpg" alt="">
-                <h4 class="h4-div-seccion-1">imagen de Macbook</h4>
+            <div class="articulos">
+
+                <img src="/img/img-macbook-pro-2019.jpg" alt="imagen de Macbook">
                 <p>$230.000</p>
                 <p>20% OFF</p>
                 <h4 class="h4-div-seccion-1">MacBook Pro 2019</h4>
             </div>
-            <div>
-                <h4 class="h4-div-seccion-1">Imagen Samsung Galaxi</h4>
+            <div class="articulos">
+
+                <img src="/img/img-samsung-galaxy-s10.jpg" alt="Imagen Samsung Galaxi">
+                
                 <p>$70.5oo</p>
                 <p>10% off</p>
                 <h4 class="h4-div-seccion-1">Samsung Galaxy S10</h4>
             </div>
-            <div>
-                <h4 class="h4-div-seccion-1">imagen del SmartTv</h4>
+            <div class="articulos">
+
+                <img src="/img/img-tv-samsung-smart.jpg" alt="imagen del SmartTv">
                 <p>$23.200</p>
                 <p>5%off</p>
                 <h4 class="h4-div-seccion-1">SmartTv Samsung 43"</h4>
@@ -67,26 +74,30 @@
         </section>
         <section class="seccion-art-2">
             <h2>Sección de Ofertas </h2>
-            <div>
-                <h4 class="h4-div-seccion-2">imagen de la cafetera</h4>
+            <div class="articulos" >
+
+                <img src="/img/img-cafetera-moulinex.jpg" alt="imagen de la cafetera">
                 <p>$6.770</p>
                 <p>40% OFF</p>
                 <h4 class="h4-div-seccion-2">Cafetera Molinex</h4>
             </div>
-            <div>
-                <h4 class="h4-div-seccion-2">imagen de Macbook</h4>
+            <div class="articulos">
+
+                <img src="/img/img-macbook-pro-2019.jpg" alt="imagen de Macbook">
                 <p>$230.000</p>
                 <p>20% OFF</p>
                 <h4 class="h4-div-seccion-2">MacBook Pro 2019</h4>
             </div>
-            <div>
-                <h4 class="h4-div-seccion-2">Imagen Samsung Galaxi</h4>
+            <div class="articulos">
+
+                <img src="/img/img-samsung-galaxy-s10.jpg" alt="Imagen Samsung Galaxi">
                 <p>$70.5oo</p>
                 <p>10% off</p>
                 <h4 class="h4-div-seccion-2">Samsung Galaxy S10</h4>
             </div>
-            <div>
-                <h4 class="h4-div-seccion-2">imagen del SmartTv</h4>
+            <div class="articulos">
+
+                <img src="/img/img-tv-samsung-smart.jpg" alt="imagen del SmartTv">
                 <p>$23.200</p>
                 <p>5%off</p>
                 <h4 class="h4-div-seccion-2">SmartTv Samsung 43"</h4>
@@ -95,16 +106,19 @@
     </main>
     <footer>
         <div class="div-footer">
+            <i class="fa-solid fa-credit-card"></i>
             <h4 class="h4-div-footer">Pagá con tarjeta o en efectivo </h4>
             <p>Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en
                 puntos de pago. ¡Y siempre es seguro</p>
         </div>
         <div class="div-footer">
+            <i class="fa-solid fa-gift"></i>
             <h4 class="h4-div-footer">Envío gratis desde $ 2.500</h4>
-            productos. Es un beneficio de Mercado Puntos.</p>
+            <p>Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de
+                productos. Es un beneficio de Mercado Puntos.</p>
         </div>
-        <p>Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de
         <div class="div-footer">
+            <i class="fa-solid fa-user-shield"></i>
             <h4 class="h4-div-footer">Seguridad, de principio a fin</h4>
             <p>¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer,
                 porque estás siempre protegid@. </p>
@@ -113,4 +127,4 @@
     </footer>
 </body>
 
-</html>
+</html
