--- a/views/home.html
+++ b/views/home.html
@@ -8,7 +8,11 @@
     <title>Home</title>
     <link rel="stylesheet" href="../css/style.css">
 </head>
-
+<style>
+    ul{
+        padding: 0%;
+    }
+</style>
 <body>
     <header class="header-general">
         <img class="logo" src="/img/logo-mercado-liebre.svg" alt="logo-mercado-liebre">
