borre algo que estaba probando

--- a/views/home.html
+++ b/views/home.html
@@ -10,7 +10,7 @@
 </head>
 <style>
     ul{
-        padding: 0%;
+        padding: ;
     }
 </style>
 <body>
@@ -131,4 +131,11 @@
     </footer>
 </body>
 
-</html
+</html>
+
+
+
+
+
+
+
