--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,3 +1,14 @@
+.header-general {
+    background-color: var(--color-Amarillo);
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+}
+.logo {
+    width: 47%;
+    margin-top: 8px;
+}
 body {
     display: flex;
     flex-direction: column;
@@ -8,25 +19,11 @@ body {
 
 }
 
-.logo {
-    width: 47%;
-    margin-top: 8px;
-}
 
-.header-general {
-    background-color: var(--color-Amarillo);
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: stretch;
-}
 .search-header {
     width: 45%;
     margin-left: 2%;
     
-}
-.fa-solid-fa-magnifying-glass{
-    margin-left: 2%;
 }
 .mano-regalo{
     display: flex;
@@ -34,10 +31,18 @@ body {
     margin-left: 16px;
     font-size: 14px;
 }
+.fa-solid-fa-magnifying-glass{
+    margin-left: 2%;
+}
 .ofertas {
     display: flex;
     justify-content: flex-start;
     /* align-content: center; */
+    
+    flex-direction: column-reverse;
+    flex-wrap: wrap;
+    align-items: flex-start;
+    margin-right: 0%;
 }
 .botones a {
     display: flex;
@@ -45,14 +50,19 @@ body {
     align-items: flex-start;
     text-decoration: none;
     color: black;
+    margin: 0;
+    padding: 0;
 }
 .login {
     text-decoration: none;
     color: black;
     padding: 0;
+    margin: 0;
 }
 .link {
     color: black;
+    margin: 0%;
+    padding: 0;
 }
 
 .burger-menu {
@@ -70,6 +80,11 @@ body {
 .banner{
     width: 100%;
     height: 70px;
+}
+h2{
+    font-size: 18px;
+    text-align: center;
+    color: var(--color-Grisoscuro);
 }
 .articulos{
     display: flex;
@@ -91,11 +106,6 @@ body {
     display: flex;
     flex-direction: row;
     justify-content: center;
-}
-h2{
-    font-size: 18px;
-    text-align: center;
-    color: var(--color-Grisoscuro);
 }
 .div-footer{
     background-color: var(--color-Grisclaro);
