--- a/views/home.html
+++ b/views/home.html
@@ -7,12 +7,12 @@
     <script src="https://kit.fontawesome.com/06a70b2dd1.js" crossorigin="anonymous"></script>
     <title>Home</title>
     <link rel="stylesheet" href="../css/style.css">
-</head>
-<style>
-    ul{
-        padding: 0;
-    }
-</style>
+     <style>
+        ul{
+            padding: 0%;
+        }
+        </style>
+ </head>
 <body>
     <header class="header-general">
         <img class="logo" src="/img/logo-mercado-liebre.svg" alt="logo-mercado-liebre">
@@ -25,16 +25,16 @@
             
             <nav class="ofertas">
              <ul class="botones">
-                  <li><a class="linck"href=""> Ofertas </a></li>
-                  <li><a class="linck"href=""> Tiendas oficiales </a></li>
-                  <li><a class="linck"href=""> Vender </a></li>
-                  <li><a class="linck"href=""> Ayuda </a></li>
+                 <li><a class="linck"href=""> Ofertas </a></li>
+                 <li><a class="linck"href=""> Tiendas oficiales </a></li>
+                 <li><a class="linck"href=""> Vender </a></li>
+                 <li><a class="linck"href=""> Ayuda </a></li>
             </ul>
             </nav>
             <nav class="login">
             <ul>
-                 <li><a class="link"href=""> Crear tu cuenta </a><i class="fa-solid fa-address-card"></i></li>
-                 <li><a class="link"href=""> Ingresar </a><i class="fa-solid fa-right-to-bracket"></i></li>
+                <li><a class="link"href=""> Crear tu cuenta </a><i class="fa-solid fa-address-card"></i></li>
+                <li><a class="link"href=""> Ingresar </a><i class="fa-solid fa-right-to-bracket"></i></li>
                 <li><a class="link"href=""> Mis compras </a><i class="fa-solid fa-basket-shopping"></i></li>
 
             </ul>
@@ -46,7 +46,7 @@
     <img class="banner" src="/img/img-home-banner.jpg" alt="">
     <main class="imagenes">
         <section class="seccion-art-1">
-            <h2>Sección: Basado en tu última visita</h2>
+            <h2 class="subtitulos">Sección: Basado en tu última visita</h2>
             <div class="articulos">
                 <img src="/img/img-cafetera-moulinex.jpg" alt="imagen de la cafetera">
                 <p>$6.770</p>
@@ -77,7 +77,7 @@
             </div>
         </section>
         <section class="seccion-art-2">
-            <h2>Sección de Ofertas </h2>
+            <h2 class="subtitulos">Sección de Ofertas </h2>
             <div class="articulos" >
 
                 <img src="/img/img-cafetera-moulinex.jpg" alt="imagen de la cafetera">
