--- a/public/css/home.css
+++ b/public/css/home.css
@@ -3,11 +3,20 @@
     width: 100%;
     display: flex;
     flex-direction: column;
-    align-items: stretch;
+    align-items: flex-start;
+}
+.header-general img input .ifa-solid-fa-magnifying-glass {
+    display: flex;
+    border: 2px solid white;
+    justify-content: flex-end;
+    position: absolute;
+    margin-top: 78px;
+    margin-left: 204px;
+    background-color: white;
 }
 .logo {
     width: 47%;
-    margin-top: 8px;
+    margin: 6%;
 }
 body {
     display: flex;
@@ -21,18 +30,43 @@ body {
 
 
 .search-header {
-    width: 45%;
-    margin-left: 2%;
-    
+    width: 56%;
+    margin-left: 7%;
+    position: relative;
+}
+.lupa{
+  /* display: flex;
+  border: 5px solid white;
+  justify-content: flex-end;
+  position: absolute;
+  margin-top: 83px;
+  margin-left: 205px;
+  background-color: white; */
+  position: absolute;
+  font-size: 17px;
+  margin-top: 24%;
+  margin-left: 65%;
+  background-color: white;
+  border: 1px solid rgb(100, 100, 100);
+  /* display: flex; */
+  /* justify-content: unset; */
+}  
+.lupa .fa-solid-fa-magnifying-glass{
+    /* margin-left: 2%; */
+    display: flex;
+    border: 2px solid white;
+    justify-content: flex-end;
+    position: absolute;
+    margin-top: 78px;
+    margin-left: 204px;
+    background-color: white;
 }
 .mano-regalo{
     display: flex;
-    align-items: center;
-    margin-left: 16px;
+    margin-left: 40px;
     font-size: 14px;
-}
-.fa-solid-fa-magnifying-glass{
-    margin-left: 2%;
+    justify-content: flex-start;
+    align-items: center;
 }
 .ofertas {
     display: flex;
@@ -43,6 +77,7 @@ body {
     flex-wrap: wrap;
     align-items: flex-start;
     margin-right: 0%;
+    display: none;
 }
 .botones a {
     display: flex;
@@ -58,6 +93,7 @@ body {
     color: black;
     padding: 0;
     margin: 0;
+    display: none;
 }
 .link {
     color: black;
@@ -71,31 +107,95 @@ body {
     color: var(--color-Grisclaro);
     font: 1em sans-serif;
     background-color: var(--color-Celeste);
-    width: 10%;
-    font-size: 24px;
-    align-items: stretch;
+    width: 12%;
+    font-size: 21px;
     margin-left: 43%;
-    border-radius: 3px;
+    border-radius: 4px;
+    padding: 9px;
+    margin-bottom: 20px;
 }
 .banner{
     width: 100%;
     height: 70px;
 }
 h2{
-    font-size: 18px;
-    text-align: center;
+    font-size: 16px;
+    /* text-align: center; */
     color: var(--color-Grisoscuro);
 }
 .articulos{
     display: flex;
     flex-direction: column;
     align-items: center;
+    width: 89%;
+    border: 1px solid grey;
+    box-shadow: 0px 0px 1px 8px #ebebeb;
+    margin: 19px 0;
+    border-width: 16%;
 }
 
+.detalles{
+    /* display: flex;
+    
+margin: 0%;
+    
+width: 0%;
+    
+font-size: 14px;
+    
+padding: 15px;
+    
+border: 1px solid var(--color-Grisclaro); */
+    width: 254px;
+    border: 1px solid #8080802e;
+}
+.fa-solid.fa-truck {
+    /* /* font-size: 16px;
+    display: flex;
+    border: 1px solid green;
+    border-radius: 50%;
+    padding-block: 9px;
+    /* background-color:white; 
+    color:green;
+    height: 12%;
+    width: 29px;  */
+    /* display: flex; */
+    border: 1px solid green;
+    border-radius: 49%;
+    width: 17%;
+    padding: 5%;
+    font-size: 11px;
+    margin-left: 0%;
+    color: green;
+    height: 20%;
+}
+.precio{
+    /* width: 98%;
+    margin: 86%;
+    font-size: 14px; */
+    margin: 0px;
+} 
+
+.descuento{
+    color: darkgreen;
+    margin: 0px;
+}
+
+.h4-div-seccion-1{
+    display: none;
+}
+
+.imagenes{
+    display: flex;
+    width: 90%;
+    margin-left: 42px;
+    box-shadow: 0px, 0, 10px rgba(100, 100, 100);
+    flex-wrap: wrap;
+    flex-direction: column;
+}
 .imagenes img {
-    width: 50%;
-    height: 50%;
-    margin-left: -4%;
+    width: 76%;
+    margin: 21px;
 }
 
 
@@ -123,4 +223,104 @@ h2{
     display: flex;
     justify-content: center;
     margin-bottom: 10px;
+}
+ /* tablet */
+@media (min-width:246px) {
+    .header-general {}
+
+    .logo {}
+
+    body {}
+
+    .search-header {}
+
+    .lupa{}
+
+    .fa-solid-fa-magnifying-glass{}
+
+    .mano-regalo{}
+
+
+    .ofertas {}
+
+    .botones a {}
+
+    .login {}
+
+    .link {}
+
+    .burger-menu {}
+
+    .banner{}
+
+    h2{}
+
+    .articulos{}
+
+    .precio{}
+
+.descuento{
+    
+}
+
+.h4-div-seccion-1{}
+
+
+    .imagenes img {}
+
+    .div-footer i {}
+
+    .div-footer{}
+
+    .h4-div-footer{}
+
+    .p-copy{} 
+}
+/* portatil depto */
+@media (min-width:769px){
+    .header-general {}
+
+    .logo {}
+
+    body {}
+
+    .search-header {}
+
+    .lupa{}
+
+    .fa-solid-fa-magnifying-glass{}
+
+    .mano-regalo{}
+
+    .ofertas {}
+
+    .botones a {}
+
+    .login {}
+
+    .link {}
+
+    .burger-menu {}
+
+    .banner{}
+
+    h2{}
+
+    .articulos{}
+
+    .precio{}
+
+    .descuento{}
+
+    .h4-div-seccion-1{}
+
+    .imagenes img {}
+
+    .div-footer i {}
+
+    .div-footer{}
+
+    .h4-div-footer{}
+
+    .p-copy{} 
 }
