modificacion en html,views , public y css

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -27,8 +27,6 @@ body {
     margin: 0;
 
 }
-
-
 .search-header {
     width: 56%;
     margin-left: 7%;
@@ -72,12 +70,13 @@ body {
     display: flex;
     justify-content: flex-start;
     /* align-content: center; */
-    
-    flex-direction: column-reverse;
+    /* flex-direction: column-reverse; */
     flex-wrap: wrap;
     align-items: flex-start;
-    margin-right: 0%;
+    /* margin-right: 0%; */
     display: none;
+    /* position: absolute; */
+    /* margin-top: 19%; */
 }
 .botones a {
     display: flex;
@@ -100,7 +99,6 @@ body {
     margin: 0%;
     padding: 0;
 }
-
 .burger-menu {
     display: flex;
     justify-content: center;
@@ -135,7 +133,8 @@ h2{
 }
 
 .detalles{
-    /* display: flex;
+    
+/* display: flex;
     
 margin: 0%;
     
@@ -146,8 +145,10 @@ font-size: 14px;
 padding: 15px;
     
 border: 1px solid var(--color-Grisclaro); */
-    width: 254px;
-    border: 1px solid #8080802e;
+    
+width: 254px;
+    
+border: 1px solid #8080802e;
 }
 .fa-solid.fa-truck {
     /* /* font-size: 16px;
@@ -161,13 +162,13 @@ border: 1px solid var(--color-Grisclaro); */
     width: 29px;  */
     /* display: flex; */
     border: 1px solid green;
-    border-radius: 49%;
-    width: 17%;
-    padding: 5%;
-    font-size: 11px;
+    border-radius: 50%;
+    width: 14%;
+    padding: 2%;
+    font-size: 12px;
     margin-left: 0%;
     color: green;
-    height: 20%;
+    /* height: 21%; */
 }
 .precio{
     /* width: 98%;
@@ -177,12 +178,13 @@ border: 1px solid var(--color-Grisclaro); */
 } 
 
 .descuento{
-    color: darkgreen;
+    color: #6f9c7b;
     margin: 0px;
 }
 
 .h4-div-seccion-1{
-    display: none;
+    
+display: none;
 }
 
 .imagenes{
@@ -225,37 +227,67 @@ border: 1px solid var(--color-Grisclaro); */
     margin-bottom: 10px;
 }
  /* tablet */
-@media (min-width:246px) {
-    .header-general {}
+@media (min-width:426px) {
+    .header-general {
+}
 
-    .logo {}
-
+    .logo {
+    width: 37%;
+}
     body {}
-
-    .search-header {}
-
-    .lupa{}
-
+    .search-header {
+    font-size: 17px;
+    margin-top: 18%;
+    width: 26%;
+    margin-left: 4%;
+    height: 5%;
+    position: absolute;
+}
+    .lupa{
+    margin-left: 33%;
+    margin-top: 141px;
+}
     .fa-solid-fa-magnifying-glass{}
 
-    .mano-regalo{}
+    .mano-regalo{
+        margin-left: 369px;
+    }
 
 
-    .ofertas {}
+    .ofertas {
+    display: flex;
+    position: absolute;
+    margin-top: 28%;
+}
 
     .botones a {}
 
-    .login {}
+    .login {
+    display: block;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    /* position: absolute; */
+    margin-top: 10%;
+}
 
     .link {}
 
-    .burger-menu {}
+    .burger-menu {
+    display: none;
+}
 
     .banner{}
 
-    h2{}
+.subtitulos{
+    /* text-decoration: solid; */
+}
 
     .articulos{}
+
+    .detalles{}
+
+    .fa-solid.fa-truck{}
 
     .precio{}
 
@@ -263,9 +295,15 @@ border: 1px solid var(--color-Grisclaro); */
     
 }
 
-.h4-div-seccion-1{}
+.h4-div-seccion-1{
+    display: block;
+}
 
-
+.imagenes{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+}
     .imagenes img {}
 
     .div-footer i {}
@@ -280,17 +318,26 @@ border: 1px solid var(--color-Grisclaro); */
 @media (min-width:769px){
     .header-general {}
 
-    .logo {}
+    .logo {
+}
 
     body {}
 
-    .search-header {}
-
-    .lupa{}
-
+    .search-header {
+    position: absolute;
+    margin-top: 18%;
+    font-size: 21px;
+    height: 3%;
+}
+    .lupa{
+    margin-top: 184px;
+    margin-left: 320px;
+}
     .fa-solid-fa-magnifying-glass{}
 
-    .mano-regalo{}
+    .mano-regalo{
+    margin-left: 483px;
+}
 
     .ofertas {}
 
@@ -302,17 +349,37 @@ border: 1px solid var(--color-Grisclaro); */
 
     .burger-menu {}
 
-    .banner{}
+    .banner{
+    height: 188px;
+}
+.subtitulos{}
 
-    h2{}
-
-    .articulos{}
-
+    .articulos{
+        box-shadow: 1px 6px 4px 17px #ebebeb;
+    }
+.detalles{
+    width: 98%;
+    border-radius: 12%;
+}
+.fa-solid.fa-truck{
+    
+width: 10%;
+    
+font-size: 12px;
+    
+height: 43px;
+}
     .precio{}
 
     .descuento{}
 
     .h4-div-seccion-1{}
+
+    .imagenes{
+    display: flex;
+    flex-wrap: nowrap;
+    flex-direction: row;
+}
 
     .imagenes img {}
 
@@ -321,6 +388,10 @@ border: 1px solid var(--color-Grisclaro); */
     .div-footer{}
 
     .h4-div-footer{}
+
+.text-footer{
+    display: flex;
+}
 
     .p-copy{} 
 }
