--- a/public/css/home.css
+++ b/public/css/home.css
@@ -133,8 +133,7 @@ h2{
 }
 
 .detalles{
-    
-/* display: flex;
+    /* display: flex;
     
 margin: 0%;
     
@@ -145,10 +144,8 @@ font-size: 14px;
 padding: 15px;
     
 border: 1px solid var(--color-Grisclaro); */
-    
-width: 254px;
-    
-border: 1px solid #8080802e;
+    width: 254px;
+    border-top: 1px solid #8080802e;
 }
 .fa-solid.fa-truck {
     /* /* font-size: 16px;
@@ -355,11 +352,13 @@ display: none;
 .subtitulos{}
 
     .articulos{
-        box-shadow: 1px 6px 4px 17px #ebebeb;
+        box-shadow: 1px 6px 10px  #ebebeb;
+        width: 24%;
+        display: inline-block;
+        padding: 7px;
     }
 .detalles{
     width: 98%;
-    border-radius: 12%;
 }
 .fa-solid.fa-truck{
     
@@ -377,11 +376,12 @@ height: 43px;
 
     .imagenes{
     display: flex;
-    flex-wrap: nowrap;
+    flex-wrap: wrap;
     flex-direction: row;
 }
 
-    .imagenes img {}
+    .imagenes img {
+}
 
     .div-footer i {}
 
