--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -1,1 +1,42 @@
+.div-footer{
+background-color: var(--color-Grisclaro);
+display: flex;
+justify-content: center;
+flex-direction: column;
+}
+.h4-div-footer{
+display: flex;
+justify-content: center;
+}
+.p-copy{
+font-size: 12px;
+color: var(--color-Grisoscuro);
+display: flex;
+justify-content: center;
+margin-bottom: 10px;
+}
 
+/* TABLET */
+@media (min-width:426px) {
+.div-footer i {}
+
+.div-footer{}
+
+.h4-div-footer{}
+
+.p-copy{} 
+}
+
+/* PORTATIL DESKTO */
+@media (min-width:769px){
+.div-footer i {}
+
+.div-footer{}
+
+.h4-div-footer{}
+
+.text-footer{
+display: flex;
+}
+.p-copy{}
+}
