--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,7 +1,10 @@
 @import url('https://fonts.googlepis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 @import url(general.css);
 @import url(home.css);
-@import url(style.css);
+@import url(footer.css);
+@import url(header.css);
+@import url(main.css);
+
 
 
     
