--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -8,6 +8,28 @@ flex-direction: column;
 display: flex;
 justify-content: center;
 }
+
+.fa-solid.fa-credit-card{
+display: flex;
+color: var(--color-Celeste);
+flex-direction: row;
+justify-content: space-around;
+}
+
+.fa-solid.fa-gift{
+display: flex;
+color: var(--color-Celeste);
+flex-direction: row;
+justify-content: space-around;  
+}
+
+.fa-solid.fa-user-shield{
+display: flex;
+color: var(--color-Celeste);
+flex-direction: row;
+justify-content: space-around; 
+}
+
 .p-copy{
 font-size: 12px;
 color: var(--color-Grisoscuro);
