--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,8 +4,9 @@
 @import url(footer.css);
 @import url(header.css);
 @import url(main.css);
-@import url(register.css);
+@import url(registre.css);
 @import url(login.css);
+
 
 
 
